# review-system-demo

./: Dockerfile.review  docker-compose.yml  pyproject.toml
review_service/: main.py  pyproject.toml
review_service/app/: crud.py  database.py  main.py  models.py  schemas.py  services.py
review_service/app/messaging/: bus.py
review_service/tests/: conftest.py  test_review.py
reward_service/: main.py  pyproject.toml
reward_service/app/: database.py
reward_service/app/adapters/: orm.py  repositories.py
reward_service/app/domain/: events.py  models.py
reward_service/app/services/: projectors.py
reward_service/tests/: conftest.py
reward_service/tests/domain/: test_models.py
reward_service/tests/service/: test_projectors.py
