[project]
name = "review-system-demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
]


[project.optional-dependencies]
rest-api-basic = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",
]
database-basic = [
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "tsidpy>=1.1.5",
]
test = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "aiosqlite>=0.21.0",
]

[tool.uv.workspace]
members = [
    "review_service",
    "reward_service",
]
